// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/ActivityFeed/task-new/TaskStatus should render the correct task status APPROVED 1`] = `
<Memo()
  status="APPROVED"
>
  <LabelPill
    type="success"
  >
    <span
      className="bdl-LabelPill bdl-LabelPill--success bdl-LabelPill--sizeLarge"
    >
      <LabelPillText>
        <span
          className="bdl-LabelPill-textContent"
        >
          <FormattedMessage
            defaultMessage="APPROVED"
            id="be.contentSidebar.activityFeed.taskNew.tasksFeedApprovedUppercaseLabel"
          >
            <div />
          </FormattedMessage>
        </span>
      </LabelPillText>
    </span>
  </LabelPill>
</Memo()>
`;

exports[`elements/content-sidebar/ActivityFeed/task-new/TaskStatus should render the correct task status COMPLETED 1`] = `
<Memo()
  status="COMPLETED"
>
  <LabelPill
    type="success"
  >
    <span
      className="bdl-LabelPill bdl-LabelPill--success bdl-LabelPill--sizeLarge"
    >
      <LabelPillText>
        <span
          className="bdl-LabelPill-textContent"
        >
          <FormattedMessage
            defaultMessage="COMPLETED"
            id="be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedUppercaseLabel"
          >
            <div />
          </FormattedMessage>
        </span>
      </LabelPillText>
    </span>
  </LabelPill>
</Memo()>
`;

exports[`elements/content-sidebar/ActivityFeed/task-new/TaskStatus should render the correct task status IN_PROGRESS 1`] = `
<Memo()
  status="IN_PROGRESS"
>
  <LabelPill
    type="default"
  >
    <span
      className="bdl-LabelPill bdl-LabelPill--default bdl-LabelPill--sizeLarge"
    >
      <LabelPillText>
        <span
          className="bdl-LabelPill-textContent"
        >
          <FormattedMessage
            defaultMessage="IN PROGRESS"
            id="be.contentSidebar.activityFeed.taskNew.tasksFeedInProgressUppercaseLabel"
          >
            <div />
          </FormattedMessage>
        </span>
      </LabelPillText>
    </span>
  </LabelPill>
</Memo()>
`;

exports[`elements/content-sidebar/ActivityFeed/task-new/TaskStatus should render the correct task status NOT_STARTED 1`] = `
<Memo()
  status="NOT_STARTED"
>
  <LabelPill
    type="default"
  >
    <span
      className="bdl-LabelPill bdl-LabelPill--default bdl-LabelPill--sizeLarge"
    >
      <LabelPillText>
        <span
          className="bdl-LabelPill-textContent"
        >
          <FormattedMessage
            defaultMessage="IN PROGRESS"
            id="be.contentSidebar.activityFeed.taskNew.tasksFeedInProgressUppercaseLabel"
          >
            <div />
          </FormattedMessage>
        </span>
      </LabelPillText>
    </span>
  </LabelPill>
</Memo()>
`;

exports[`elements/content-sidebar/ActivityFeed/task-new/TaskStatus should render the correct task status REJECTED 1`] = `
<Memo()
  status="REJECTED"
>
  <LabelPill
    type="error"
  >
    <span
      className="bdl-LabelPill bdl-LabelPill--error bdl-LabelPill--sizeLarge"
    >
      <LabelPillText>
        <span
          className="bdl-LabelPill-textContent"
        >
          <FormattedMessage
            defaultMessage="REJECTED"
            id="be.contentSidebar.activityFeed.taskNew.tasksFeedRejectedUppercaseLabel"
          >
            <div />
          </FormattedMessage>
        </span>
      </LabelPillText>
    </span>
  </LabelPill>
</Memo()>
`;
